--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.mail.host = smtp.gmail.com
 spring.mail.port = 587
 spring.mail.properties.mail.smtp.starttls.enable = true
 spring.mail.username = nationalbankofireland@gmail.com
-spring.mail.password = nb!r1@nd
+spring.mail.password = nb!r1@nd123 --password has been changed due to security reasons
 spring.mail.properties.mail.smtp.starttls.required = true
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.connectiontimeout = 5000
